@@ -56,6 +56,7 @@ $events = [
 ["EVT_GRID_RANGE_SELECT", 1, "wxEVT_GRID_RANGE_SELECT"],
 ["EVT_LIST_END_LABEL_EDIT", 2, "wxEVT_COMMAND_LIST_END_LABEL_EDIT"],
 ["EVT_INIT_DIALOG", 1, "wxEVT_INIT_DIALOG"],
+["EVT_CHOICEBOOK_PAGE_CHANGED", 2, "wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGED"],
 ["EVT_NOTEBOOK_PAGE_CHANGED", 2, "wxEVT_COMMAND_NOTEBOOK_PAGE_CHANGED"],
 ["EVT_LISTBOOK_PAGE_CHANGED", 2, "wxEVT_COMMAND_LISTBOOK_PAGE_CHANGED"],
 ["EVT_TASKBAR_LEFT_DCLICK", 1, "wxEVT_TASKBAR_LEFT_DCLICK"],
@@ -99,6 +100,7 @@ $events = [
 ["EVT_TREE_ITEM_COLLAPSING", 2, "wxEVT_COMMAND_TREE_ITEM_COLLAPSING"],
 ["EVT_MOUSEWHEEL", 1, "wxEVT_MOUSEWHEEL"],
 ["EVT_COMMAND_RANGE", 3, "wxEVT_NULL"],
+["EVT_CHOICEBOOK_PAGE_CHANGING", 2, "wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGING"],
 ["EVT_NOTEBOOK_PAGE_CHANGING", 2, "wxEVT_COMMAND_NOTEBOOK_PAGE_CHANGING"],
 ["EVT_LISTBOOK_PAGE_CHANGING", 2, "wxEVT_COMMAND_LISTBOOK_PAGE_CHANGING"],
 ["EVT_TEXT_URL", 2, "wxEVT_COMMAND_TEXT_URL"],
